objects/CSS_DataExchange_Child__c.object
<CustomObject>
    <fields>
        <fullName>CSS_DataExchange_Parent__c</fullName>
        <label>CSS_DataExchange_Parent</label>
        <referenceTo>CSS_DataExchange_Parent__c</referenceTo>
        <relationshipLabel>CSS_DataExchange_Child</relationshipLabel>
        <relationshipName>CSS_DataExchange_Child</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Caption__c</fullName>
        <label>Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataExchangeChildType__c</fullName>
        <label>DataExchangeChildType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataExchangeChild_Status__c</fullName>
        <label>DataExchangeChild Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UnProcessed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <label>ESN</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultCodeR2__c</fullName>
        <label>FaultCodeR2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultCode__c</fullName>
        <formula>if(Fault_Code__r.Name != null,Fault_Code__r.Name,FaultCodeR2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FaultCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Type__c</fullName>
        <label>Fault Code Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fault Code</label>
        <referenceTo>CSS_Fault_Code_Master__c</referenceTo>
        <relationshipLabel>CSS_DataExchange_Child</relationshipLabel>
        <relationshipName>CSS_DataExchange_Child</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Fault_Code__c</fullName>
        <label>Primary Fault Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedFault_Code__c</fullName>
        <formula>IF( Related_Fault_Code__c ==&apos;&apos; ,&apos;None&apos; ,Related_Fault_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelatedFault Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Fault_Code__c</fullName>
        <label>Related Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Action__c</fullName>
        <label>Repair Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Comments__c</fullName>
        <label>Repair Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repair_Fault_Code__c</fullName>
        <label>Repair Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Related_Fault_Code__c</fullName>
        <label>Repair Related Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Solution__c</fullName>
        <label>Repair Solution</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Symptom__c</fullName>
        <label>Repair Symptom</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Component__c</fullName>
        <label>Selected Component</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Model_Name__c</fullName>
        <label>Service Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sol_Descriptions__c</fullName>
        <label>Sol Descriptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Fault_Code__c</fullName>
        <label>Solution Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_ID__c</fullName>
        <description>To store solution IDs</description>
        <label>Solution ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Number__c</fullName>
        <label>Solution Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Related_Fault_Code__c</fullName>
        <label>Solution Related Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Symptom__c</fullName>
        <label>Solution Symptom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Title__c</fullName>
        <label>Solution Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions_Descriptions__c</fullName>
        <label>Solutions Descriptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSS_DataExchange_Child</label>
    <nameField>
        <label>CSS_DataExchange_Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_DataExchange_Child</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>